--- a/Translation/minimonsTranslation.csv
+++ b/Translation/minimonsTranslation.csv
@@ -9,3 +9,4 @@ PRESS_START,Aperte START para começar!,Press START to start!
 ONLY_ONE_MINIMON_CARD,Posicione uma carta de Minimon.,Place a Minimon card.
 ONLY_ONE_CARD,Posicione apenas UMA carta no tabuleiro.,Place only ONE card on the board.
 PLACE_A_MINIMON_CARD,Posicione seu Minimon no tabuleiro.,Place your Minimon on the board.
+SCORE,Pontos,Score
